syntax = "proto3";

package catalogs;

service CatalogManager {
    rpc RetrieveCatalog (RetrieveCatalogRequest) returns (Catalog) {
    }
    rpc CreateCatalog (CreateCatalogRequest) returns (CreateCatalogResponse) {
    }
}

message RetrieveCatalogRequest {
    string catalog_id = 1;
    repeated string selections = 2;
    repeated string exclusions = 3;
}

message CreateCatalogRequest {
    string catalog_id = 1;
    repeated Family families = 2;
    repeated Exclusion exclusions = 3;
    repeated Inclusion inclusions = 4;
}

message CreateCatalogResponse {
    string catalog_id = 1;
}

message Family {
    string family_id = 1;
    repeated string items = 2;
}

message Exclusion {
    string selected_item = 1;
    repeated string exclusions = 2;
}

message Inclusion {
    string selected_item = 1;
    repeated string inclusions = 2;
}

message Catalog {
    string catalog_id = 1;
    map<string, ItemStatus> options = 2;
}

message ItemStatus {
    enum Status {
        AVAILABLE = 0;
        SELECTED = 1;
        EXCLUDED = 2;
        REQUIRED = 3;
    }

    string item_id = 1;
    Status status = 2;
}
